// Statify ER diagram source
//
// Paste this file into https://dbdiagram.io to render the diagram, then
// export PNG to docs/erd.png. Keep this file in sync with
// packages/db/prisma/schema.prisma; the relational model write-up lives in
// report/erd-explanation.md.
//
// Naming follows the SQL identifiers (snake_case) so the diagram matches
// what an analyst sees when querying the database directly.

Project statify {
  database_type: 'PostgreSQL'
  Note: 'Music streaming analytics application built on the Spotify Million Playlist Dataset, with 30-second previews fetched from the iTunes Search API. The schema splits read-mostly MPD-derived catalog data from read-write app-layer data so the ingest pipeline never contends with user traffic for the same rows.'
}

// =============================================================
// Enums
// =============================================================

Enum track_artist_role {
  primary
  featured
}

Enum user_role {
  user
  admin
}

Enum listening_source {
  preview
  seed
}

// =============================================================
// MPD-derived catalog (read-mostly, populated by the ingest CLI)
// =============================================================

Table artists {
  id              int           [pk, increment]
  spotify_uri     text          [not null, unique]
  name            text          [not null]
  normalized_name text          [not null]
  created_at      timestamp     [not null, default: `now()`]

  indexes {
    normalized_name
    name [type: gin, name: 'artists_name_trgm_idx', note: 'pg_trgm GIN for fuzzy search']
  }

  Note: 'One row per distinct artist URI seen in the MPD dataset. normalized_name is lower-cased and punctuation-stripped for case-insensitive lookups during ingest; pg_trgm GIN indexes back the global search bar.'
}

Table albums {
  id                int        [pk, increment]
  spotify_uri       text       [not null, unique]
  name              text       [not null]
  primary_artist_id int        [not null, ref: > artists.id]
  created_at        timestamp  [not null, default: `now()`]

  indexes {
    primary_artist_id
    name [type: gin, name: 'albums_name_trgm_idx', note: 'pg_trgm GIN for fuzzy search']
  }

  Note: 'Albums are sourced from MPD track payloads. primary_artist_id captures the album-level artist; per-track featured artists live in track_artists.'
}

Table tracks {
  id                  int        [pk, increment]
  spotify_uri         text       [not null, unique]
  name                text       [not null]
  album_id            int        [not null, ref: > albums.id]
  duration_ms         int        [not null]
  itunes_track_id     bigint     [note: 'set after first iTunes Search lookup']
  preview_url         text       [note: '30-second clip URL from iTunes']
  preview_fetched_at  timestamp

  indexes {
    album_id
    preview_url
    name [type: gin, name: 'tracks_name_trgm_idx', note: 'pg_trgm GIN for fuzzy search']
    id [name: 'tracks_preview_url_not_null_idx', note: 'partial index WHERE preview_url IS NOT NULL']
  }

  Note: 'Tracks combine MPD catalog rows with iTunes-derived preview metadata. preview_url and preview_fetched_at populate lazily on first play; preview_fetched_at gates the cache TTL.'
}

Table track_artists {
  track_id  int                [not null, ref: > tracks.id]
  artist_id int                [not null, ref: > artists.id]
  role      track_artist_role  [not null, default: 'primary']

  indexes {
    (track_id, artist_id) [pk]
    artist_id
  }

  Note: 'Many-to-many between tracks and artists. role distinguishes primary from featured credits so analytics queries can scope to lead artist when needed.'
}

Table mpd_playlists {
  id            int        [pk, increment]
  mpd_pid       int        [not null, unique, note: 'original playlist id from the MPD JSON']
  name          text       [not null]
  collaborative boolean    [not null, default: false]
  modified_at   timestamp  [not null]
  num_followers int        [not null]
  num_edits     int        [not null]
  duration_ms   bigint     [not null]

  Note: 'One row per MPD playlist. The mpd_pid uniqueness lets the ingest CLI run idempotently across resumed slices.'
}

Table mpd_playlist_tracks {
  playlist_id int  [not null, ref: > mpd_playlists.id]
  track_id    int  [not null, ref: > tracks.id]
  pos         int  [not null]

  indexes {
    (playlist_id, pos) [pk]
    track_id
  }

  Note: 'Ordered membership of tracks in MPD playlists. The composite primary key (playlist_id, pos) keeps insert order stable and lets the similar-playlists query do efficient set operations.'
}

// =============================================================
// App-layer (read-write)
// =============================================================

Table users {
  id            int        [pk, increment]
  email         text       [not null, unique]
  password_hash text       [not null, note: 'Argon2id']
  display_name  text       [not null]
  role          user_role  [not null, default: 'user']
  created_at    timestamp  [not null, default: `now()`]
  last_login_at timestamp
  deleted_at    timestamp  [note: 'soft delete tombstone']
  banned_at     timestamp  [note: 'admin ban tombstone']

  indexes {
    deleted_at
    banned_at
  }

  Note: 'Application accounts. Soft deletion (deleted_at) preserves listening history for analytics; banned_at prevents login and refresh-token use without removing audit trail.'
}

Table refresh_tokens {
  id         int        [pk, increment]
  user_id    int        [not null, ref: > users.id]
  token_hash text       [not null, unique]
  expires_at timestamp  [not null]
  revoked_at timestamp
  user_agent text
  ip_addr    text
  created_at timestamp  [not null, default: `now()`]

  indexes {
    user_id
  }

  Note: 'Per-device refresh tokens. token_hash is SHA-256 of the raw token; revoked_at supports server-side logout, password change, ban, and role-change flows.'
}

Table listening_history {
  id                 int               [pk, increment]
  user_id            int               [not null, ref: > users.id]
  track_id           int               [not null, ref: > tracks.id]
  played_at          timestamp         [not null, default: `now()`]
  source             listening_source  [not null, default: 'preview']
  duration_played_ms int               [not null]
  idempotency_key    text              [note: 'client-supplied per session, scoped by user']

  indexes {
    (user_id, played_at) [name: 'listening_history_user_id_played_at_idx', note: 'descending on played_at']
    track_id
    (user_id, idempotency_key) [unique]
  }

  Note: 'Append-only play event log. The (user_id, played_at DESC) index backs Recent listens and every personal analytics query. The (user_id, idempotency_key) unique constraint makes duplicate POSTs safe under retries.'
}

Table user_playlists {
  id          int        [pk, increment]
  user_id     int        [not null, ref: > users.id]
  name        text       [not null]
  description text
  is_public   boolean    [not null, default: false]
  created_at  timestamp  [not null, default: `now()`]
  updated_at  timestamp  [not null]

  indexes {
    user_id
  }

  Note: 'User-authored playlists. is_public toggles inclusion in the community browse feed; private playlists are visible only to their owner.'
}

Table user_playlist_tracks {
  user_playlist_id int        [not null, ref: > user_playlists.id]
  track_id         int        [not null, ref: > tracks.id]
  pos              int        [not null]
  added_at         timestamp  [not null, default: `now()`]

  indexes {
    (user_playlist_id, pos) [pk]
    track_id
  }

  Note: 'Ordered track membership for user playlists. The composite primary key on (user_playlist_id, pos) makes drag-and-drop reorders a single positional rewrite.'
}

Table audit_log {
  id            int        [pk, increment]
  actor_user_id int        [ref: > users.id, note: 'nullable: system actions have no actor']
  action        text       [not null]
  target_table  text       [not null]
  target_id     text
  metadata      json
  created_at    timestamp  [not null, default: `now()`]

  indexes {
    (actor_user_id, created_at) [name: 'audit_log_actor_user_id_created_at_idx', note: 'descending on created_at']
    (target_table, target_id)
  }

  Note: 'Append-only audit trail for privileged actions: password change, account deletion, admin ban/unban, admin role change, admin ingest trigger. actor_user_id is nullable so deleting a user preserves their historical actions via ON DELETE SET NULL.'
}

Table ingest_checkpoints {
  id               int        [pk, increment]
  slice_filename   text       [not null, unique]
  playlists_total  int        [not null]
  playlists_done   int        [not null, default: 0]
  artists_upserted int        [not null, default: 0]
  albums_upserted  int        [not null, default: 0]
  tracks_upserted  int        [not null, default: 0]
  started_at       timestamp  [not null, default: `now()`]
  completed_at     timestamp
  error_message    text

  Note: 'Resumable checkpoints for the MPD ingest CLI. One row per slice file; completed_at flips when the slice finishes successfully and error_message captures the last failure for retry diagnostics.'
}
